# wip-comms-benchtop-demo

./: CMakeLists.txt  README.md  build.sh
.circleci/: config.yml
.circleci/armhf-docker/: Dockerfile
.circleci/base-docker/: Dockerfile
cmake_modules/: GraphViz.cmake  ProjectVersion.cmake
config/: dpi-operator.pb.cfg  dpi-veh1.pb.cfg  gobyd-operator-test.pb.cfg  gobyd-operator.pb.cfg  gobyd-veh1-test.pb.cfg  gobyd-veh1.pb.cfg  liaison-operator-test.pb.cfg  liaison-operator.pb.cfg  liaison-veh1.pb.cfg  liaison.pb.cfg  server.conf  tool-operator.pb.cfg
config/hwil/: classifier-veh1.pb.cfg  db-veh1.pb.cfg  dpi-operator.pb.cfg  dpi-veh1.pb.cfg  environmental-veh1.pb.cfg  gobyd-operator.pb.cfg  gobyd-veh1.pb.cfg  gps-veh1.pb.cfg  liaison-operator.pb.cfg  liaison-veh1.pb.cfg  tool-veh1.pb.cfg
config/sim/: classifier-veh1.pb.cfg  db-veh1.pb.cfg  dpi-operator.pb.cfg  dpi-veh1.pb.cfg  gobyd-operator.pb.cfg  gobyd-veh1.pb.cfg  gps-veh1.pb.cfg  liaison-operator.pb.cfg  liaison-veh1.pb.cfg
config/systemd/server/: goby_logger.service  gobyd.service  liaison.service  progressive_imagery.service
config/systemd/veh1/: classifier.service  environmental_driver.service  goby_logger.service  gobyd.service  ifcb_database.service  ifcb_imagedb.service  progressive_imagery.service
scripts/: download_progressive_imagery_circleci_debs.sh  update_copyright_headers.sh
src/: CMakeLists.txt
src/doc/: CMakeLists.txt
src/doc/copyright/: gpl2_header.txt
src/doc/doxygen/: CMakeLists.txt  wip-comms.doxy.in
src/doc/graphviz/: CMakeLists.txt
src/doc/markdown/: doc_00-main.md  doc_01-build.md  doc_10-automation.md  doc_11-reuse.md  doc_20-payload.md  doc_20-shore-server.md
src/lib/: CMakeLists.txt
src/lib/config/: CMakeLists.txt  classifier_config.proto  environmental_driver_config.proto  geo_origin.proto  gps_config.proto  ifcb_database_config.proto  liaison_config.proto
src/lib/liaison/: CMakeLists.txt  liaison_imagery.cpp  liaison_imagery.h  liaison_load.cpp  liaison_load.h
src/lib/messages/: CMakeLists.txt  environmental.proto  gps.proto  groups.h  image_attributes.proto  status.proto
src/test/: CMakeLists.txt
src/test/tools/: CMakeLists.txt  config.proto  main.cpp
src/test/tools/liaison/: CMakeLists.txt  main.cpp
src/test/tools/regex/: CMakeLists.txt  config.proto  main.cpp  subscriber.h
